--- a/ui-chatbot/public/manifest.json
+++ b/ui-chatbot/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Chatbot Tutor Driving",
+  "name": "Chatbot Tutor Driving",
   "icons": [
     {
       "src": "favicon.ico",
